# python-ddd-example

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yml  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  setup.cfg
compose/: Dockerfile
compose/env_variables/: db.env.example  rabbit.env.example
src/apps/backoffice/backend/: start.py
src/apps/uvcp/backend/: start.py
src/contexts/backoffice/auth/domain/: __init__.py
